crates/plotnik-tests/tests/03-analyze/definitions/error_anchor_only_body.txt
Q = .
------------------ DIAGNOSTICS -------------------
error: query defines no selectable entry point
 --> query.ptk:1:1
  |
1 | Q = .
  | ^
  |
help: a definition selectable as an entry point must match exactly one root node; wrap constraints in a node pattern, e.g. `Q = (program .)`
-------------------- SYMBOLS ---------------------
